<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_background"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:alpha="0.2"
        android:scaleType="fitCenter"
        android:src="@drawable/splash_animation7" />

    <ScrollView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Scrollview">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/infotitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="28sp"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/infotext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infotitle"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/infoText"
                android:textSize="22sp"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infotext"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:text="@string/myDetails"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>